Mobile view profile
Profile mobile view predicitions

--- a/client/stylesheets/globals/tabs.import.less
+++ b/client/stylesheets/globals/tabs.import.less
@@ -9,6 +9,7 @@
 
 .tab-pane .panel-body {
   border-top: none;
+  width: auto;
 }
 
 .tabs-left .tab-pane .panel-body, .tabs-right .tab-pane .panel-body {
