--- a/client/stylesheets/globals/panels.import.less
+++ b/client/stylesheets/globals/panels.import.less
@@ -32,8 +32,9 @@
   background: #fff;
   border: 1px solid @border-color;
   border-radius: 2px;
-  padding: 20px;
+  padding: auto;
   position: relative;
+  width: auto;
 }
 
 
@@ -183,7 +184,7 @@
 }
 
 .small-header .panel-body h2 {
-  font-size: 14px;
+  font-size: auto;
   font-weight: 600;
   text-transform: uppercase;
   margin: 0 0 0 0;
