profile view update
profile mobile view update

--- a/client/stylesheets/globals/tabs.import.less
+++ b/client/stylesheets/globals/tabs.import.less
@@ -9,7 +9,7 @@
 
 .tab-pane .panel-body {
   border-top: none;
-  width: auto;
+  width: 100%;
 }
 
 .tabs-left .tab-pane .panel-body, .tabs-right .tab-pane .panel-body {
