--- a/client/stylesheets/globals/tabs.import.less
+++ b/client/stylesheets/globals/tabs.import.less
@@ -7,6 +7,12 @@
   border-bottom: 1px solid @border-color;
 }
 
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device width: 480px){
+    
+  }
+
 .tab-pane .panel-body {
   border-top: none;
   width: 100%;
