--- a/client/stylesheets/globals/tabs.import.less
+++ b/client/stylesheets/globals/tabs.import.less
@@ -9,7 +9,7 @@
 
 @media only screen
   and (min-device-width: 320px)
-  and (max-device width: 480px){
+  and (max-device-width: 480px){
     
   }
 
