--- a/client/stylesheets/globals/various.import.less
+++ b/client/stylesheets/globals/various.import.less
@@ -174,7 +174,8 @@
 #logo.light-version span {
   font-weight: 600;
   color: @color-navy-blue;
-  font-size: 14px;
+  font-size: auto;
+  width: auto;
 }
 
 .profile-picture {
