--- a/client/stylesheets/globals/various.import.less
+++ b/client/stylesheets/globals/various.import.less
@@ -614,7 +614,7 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
   height: 62px;
 }
 
-@media(max-width:768px) {
+@media(max-width:100%) {
 
   .navbar-form-custom, .navbar-right, #logo {
     display: none;
@@ -647,7 +647,7 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 
 }
 
-@media(max-width: 320px) {
+@media(max-width: 100%) {
   #wrapper {
     overflow: hidden;
   }
@@ -718,7 +718,7 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
   padding: 40px 40px 0px 40px;
 }
 
-@media(max-width: 768px) {
+@media(max-width: 100%) {
 
   .normalheader {
     padding: 15px 15px 0px 15px;
@@ -1020,7 +1020,7 @@ label.error:before {
 }
 
 /* Notes page */
-@media (min-width: 991px)
+@media (min-width: 100%)
 {
   #notes
   {
@@ -1080,7 +1080,7 @@ label.error:before {
 
 }
 
-@media (max-width: 768px) {
+@media (max-width: 100%) {
   .mobile-menu-toggle {
     display: block;
   }
@@ -1118,7 +1118,7 @@ label.error:before {
 
 }
 
-@media (min-width: 769px) {
+@media (min-width: 100%) {
   .mobile-navbar, .mobile-navbar.collapse.in {
     display: none;
   }
