Revert "@media fix"
This reverts commit db6e1c6df00fd75d7407199cd03db0acb2b7772f.

--- a/client/stylesheets/globals/various.import.less
+++ b/client/stylesheets/globals/various.import.less
@@ -174,8 +174,7 @@
 #logo.light-version span {
   font-weight: 600;
   color: @color-navy-blue;
-  font-size: auto;
-  width: auto;
+  font-size: 14px;
 }
 
 .profile-picture {
