Revert "Mobile view profile"
This reverts commit 2df6a4f12bed3186472938c5b97c6b5ff0897a25.

--- a/client/stylesheets/globals/panels.import.less
+++ b/client/stylesheets/globals/panels.import.less
@@ -32,9 +32,8 @@
   background: #fff;
   border: 1px solid @border-color;
   border-radius: 2px;
-  padding: auto;
+  padding: 20px;
   position: relative;
-  width: auto;
 }
 
 
@@ -184,7 +183,7 @@
 }
 
 .small-header .panel-body h2 {
-  font-size: auto;
+  font-size: 14px;
   font-weight: 600;
   text-transform: uppercase;
   margin: 0 0 0 0;
