Committing hanges to landing page  and predictions table. Landing page part will be removed completely as we have a different app for this now

--- a/client/templates/head.html
+++ b/client/templates/head.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Page title -->
-    <title>HOMER | WebApp admin theme</title>
+    <title>EURO 2016 ennustusmäng</title>
 
     <!--
     You need to include this script for Google Maps.
@@ -14,4 +14,9 @@
     -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQTpXj82d8UpCi97wzo_nKXL7nYrd4G70"></script>
 	<script src="https://js.braintreegateway.com/js/braintree-2.22.2.min.js"></script>
+	
+	<!-- Flatty theme fonts -->
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,900' rel='stylesheet' type='text/css'>
+	
+
 </head>
