--- a/client/templates/views/landing/landing-page.html
+++ b/client/templates/views/landing/landing-page.html
@@ -1,4 +1,4 @@
-<template name="landingPage">
+<template name="xxxlandingPage">
 
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
