--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -57,4 +57,4 @@
 @import "globals/betfield.import.less";
 
 // Styles for landing page
-@import "globals/landing.import.less";
+// @import "globals/landing.import.less";
