Fixture selection from Calendar. Tidying up Router and Navigation

--- a/client/templates/views/dashboards/dashboard.html
+++ b/client/templates/views/dashboards/dashboard.html
@@ -4,7 +4,7 @@
 
         <div class="content">
 
-            {{#pageTitle title="Welcome to Homer Theme"}}
+            {{#pageTitle title="EURO 2016 ennustusleht"}}
 
                 Special <strong>Meteor Admin Theme</strong> for small, medium and large webapp with very clean and aesthetic
                 style and feel.
