--- a/client/templates/common/navigation.html
+++ b/client/templates/common/navigation.html
@@ -42,13 +42,12 @@
             </div>
 
 			<ul class="nav" id="side-menu">
-				<li class="{{isActiveRoute regex='leagues'}}"><a href="{{pathFor route='leagues'}}">Liigad</a></li>
-				<li class="{{isActiveRoute regex='predictions'}}"><a href="{{pathFor route='predictions'}}">Ennustused</a></li>
+				<li class="{{isActiveRoute regex='dashboard'}}"><a href="{{pathFor route='dashboard'}}">Ülevaade</a></li>
+                <li class="{{isActiveRoute regex='predictions'}}"><a href="{{pathFor route='predictions'}}">Ennustused</a></li>
+                <li class="{{isActiveRoute regex='table'}}"><a href="{{pathFor route='table'}}">Edetabel</a></li>
 				<li class="{{isActiveRoute regex='calendar'}}"><a href="{{pathFor route='calendar'}}">Kalender</a></li>
-				<li class="{{isActiveRoute regex='chatView'}}"><a href="{{pathFor route='chatView'}}">Vestlused</a></li>
-				<li class="{{isActiveRoute regex='profile'}}"><a href="{{pathFor route='profile'}}">Profiil</a></li>
-				<li class="{{isActiveRoute regex='appPlans'}}"><a href="{{pathFor route='appPlans'}}">Hinnakiri</a></li>
-				<li class="{{isActiveRoute regex='faq'}}"><a href="{{pathFor route='faq'}}">KKK</a></li>
+                <li class="{{isActiveRoute regex='rules'}}"><a href="{{pathFor route='rules'}}">Reeglid</a></li>
+                <li class="{{isActiveRoute regex='profile'}}"><a href="{{pathFor route='profile'}}">Profiil</a></li>
             </ul>
 			
             <!--ul class="nav" id="side-menu">
