--- a/client/stylesheets/globals/betfield.import.less
+++ b/client/stylesheets/globals/betfield.import.less
@@ -34,32 +34,32 @@
 // Table style for Predictions
 
 .bf-table-date {
-    width: 200px; 
+    width: auto; 
     text-align:center;
 }
 
 .bf-table-home {
-    width: 200px; 
-    text-align:right;
+    width: auto; 
+    text-align: center;
 }
 
 .bf-table-vs {
-    width: 260px;
+    width: auto;
 }
 
 .bf-table-vs img {
-    height: 48px; 
-    padding-left:30px; 
-    padding-right: 30px;
+    height: auto; 
+    padding-left:10px; 
+    padding-right: 10px;
 }
 
 .bf-table-away {
-    width: 200px; 
-    text-align:left;
+    width: auto; 
+    text-align: left;
 }
 
 .bf-table-group {
-    width: 100px; 
+    width: auto; 
     text-align:center;
 }
 
@@ -70,6 +70,61 @@
 .bf-table-score input {
     width: 2em;
     text-align: center;
+}
+
+/* 
+Max width before this PARTICULAR table gets nasty
+This query will take effect for any screen smaller than 760px
+and also iPads specifically.
+*/
+@media 
+only screen and (max-width: 760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+	/* Force table to not be like tables anymore */
+	table, thead, tbody, th, td, tr { 
+	display: block;
+        
+        width: 100%; 
+        	}
+	
+	/* Hide table headers (but not display: none;, for accessibility) */
+	thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+	
+	tr { border: 1px solid #ccc; }
+	
+	td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+		padding-left: 50%; 
+        position: center;
+        text-align: center;
+        
+	}
+	
+	td:before { 
+		/* Now like a table header */
+	/*	position: absolute;*/
+		/* Top/left values mimic padding */
+		top: 6px;
+		left: 6px;
+		width: 100%; 
+		padding-right: 10px; 
+		white-space: nowrap;
+	}
+	
+	/*
+	Label the data
+	*/
+	/*td:nth-of-type(1):before { content: "First Name"; }*/
+	
+	
 }
 
 /* remove the spinner */
