Predictions Mobile view fixes
Predictions Mobile view fixes

--- a/client/stylesheets/globals/betfield.import.less
+++ b/client/stylesheets/globals/betfield.import.less
@@ -1,6 +1,6 @@
 .bf-table {
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 18px;
+    font-size: 100%;
 }
 
 .bf-table h1 {
@@ -36,31 +36,36 @@
 .bf-table-date {
     width: auto; 
     text-align:center;
+    height: auto;
 }
 
 .bf-table-home {
     width: auto; 
     text-align: center;
+    height: auto;
 }
 
 .bf-table-vs {
     width: auto;
+    text-align: center;
 }
 
 .bf-table-vs img {
-    height: auto; 
+    height: 100%; 
     padding-left:10px; 
     padding-right: 10px;
 }
 
 .bf-table-away {
     width: auto; 
-    text-align: left;
+    text-align: center;
+    height: auto;
 }
 
 .bf-table-group {
     width: auto; 
     text-align:center;
+    height: auto;
 }
 
 .bf-table-score {
@@ -68,7 +73,7 @@
 }
 
 .bf-table-score input {
-    width: 2em;
+    width: auto;
     text-align: center;
 }
 
@@ -83,12 +88,12 @@ only screen and (max-width: 760px),
 
 	/* Force table to not be like tables anymore */
 	table, thead, tbody, th, td, tr { 
-	display: block;
+	display: table-cell-block;
         
         width: 100%; 
         	}
 	
-	/* Hide table headers (but not display: none;, for accessibility) */
+	/* Hide table headers (but not display: none;, for accessibility) 
 	thead tr { 
 		position: absolute;
 		top: -9999px;
@@ -98,7 +103,7 @@ only screen and (max-width: 760px),
 	tr { border: 1px solid #ccc; }
 	
 	td { 
-		/* Behave  like a "row" */
+		/* Behave  like a "row" 
 		border: none;
 		border-bottom: 1px solid #eee; 
 		position: relative;
@@ -111,18 +116,18 @@ only screen and (max-width: 760px),
 	td:before { 
 		/* Now like a table header */
 	/*	position: absolute;*/
-		/* Top/left values mimic padding */
+		/* Top/left values mimic padding 
 		top: 6px;
 		left: 6px;
 		width: 100%; 
 		padding-right: 10px; 
-		white-space: nowrap;
+		white-space: nowrap; */
 	}
 	
 	/*
 	Label the data
 	*/
-	/*td:nth-of-type(1):before { content: "First Name"; }*/
+	/*td:nth-of-type(1):before { content: "First Name"; }
 	
 	
 }
