Results table template

--- a/client/stylesheets/globals/betfield.import.less
+++ b/client/stylesheets/globals/betfield.import.less
@@ -68,6 +68,12 @@
     height: auto;
 }
 
+.bf-table-user {
+    width: auto; 
+    text-align: center;
+    height: auto;
+}
+
 .bf-table-score {
     text-align:center;
 }
@@ -75,6 +81,12 @@
 .bf-table-score input {
     width: auto;
     text-align: center;
+}
+
+.bf-table-points {
+    width: auto; 
+    text-align: center;
+    height: auto;
 }
 
 /* 
