--- a/client/templates/views/fixtures/fixtures.html
+++ b/client/templates/views/fixtures/fixtures.html
@@ -17,7 +17,7 @@
 								</div>
 							</div>
                             
-							{{> Template.dynamic template="predictionsTable" data=predictionsData}}
+							{{> Template.dynamic template="resultsTable" data=predictionsData}}
 							
                         </div>
                     
