User points table

--- a/client/stylesheets/globals/various.import.less
+++ b/client/stylesheets/globals/various.import.less
@@ -815,6 +815,8 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
   bottom: 0;
   left: 0;
   right: 0;
+  opacity: 0.4;
+  filter: alpha(opacity=40); /* For IE8 and earlier */
 }
 
 .splash-title {
