--- a/client/templates/common/splash.html
+++ b/client/templates/common/splash.html
@@ -1,11 +1,21 @@
 <template name="splash">
     <!-- Simple splash screen-->
     <div class="splash">
-        <div class="color-line"></div>
-        <div class="splash-title"><h1>Homer - Responsive Admin Theme</h1>
-            <p>Special Meteor Admin Theme for small and medium webapp with very clean and aesthetic style and
-                feel. </p>
-            <div class="spinner"> <div class="rect1"></div> <div class="rect2"></div> <div class="rect3"></div> <div class="rect4"></div> <div class="rect5"></div> </div>
+        <div class="splash-title">
+            <div class="sk-circle">
+                <div class="sk-circle1 sk-child"></div>
+                <div class="sk-circle2 sk-child"></div>
+                <div class="sk-circle3 sk-child"></div>
+                <div class="sk-circle4 sk-child"></div>
+                <div class="sk-circle5 sk-child"></div> 
+                <div class="sk-circle6 sk-child"></div>
+                <div class="sk-circle7 sk-child"></div>
+                <div class="sk-circle8 sk-child"></div>
+                <div class="sk-circle9 sk-child"></div>
+                <div class="sk-circle10 sk-child"></div>
+                <div class="sk-circle11 sk-child"></div>
+                <div class="sk-circle12 sk-child"></div>
+            </div>
         </div>
     </div>
     <!--[if lt IE 7]>
