--- a/client/templates/views/calendar/calendar.html
+++ b/client/templates/views/calendar/calendar.html
@@ -1,14 +1,23 @@
 <template name="calendar">
 
-    {{> pageHeader title=getTitle desc=getDescription}}
 	{{#staggering}}
 
     <div class="content">
 
         <div class="row">
             <div class="col-lg-12">
-                {{#panel title=getTitle}}
+                {{#panel}}
+                    <div class="bf-table">
+                        <div id="selector" class="fc fc-ltr fc-unthemed bf-table-selector">
+                            <div class="fc-toolbar">
+                                <div class="fc-left">
+                                    <h1>Kalender</h1>
+                                </div>   
+                            </div>
+                        </div>
+                    </div>
                     <div id="calendar"></div>
+                    
                 {{/panel}}
             </div>
         </div>
