Login page rework

--- a/client/templates/common/footer.html
+++ b/client/templates/common/footer.html
@@ -1,8 +1,7 @@
 <template name="footer">
     <footer class="footer">
         <span class="pull-right">
-            Example text
+           FC Twister &copy; 2016
         </span>
-        Company 2015-2020
     </footer>
 </template>
