--- a/client/templates/views/table/user-results-table.html
+++ b/client/templates/views/table/user-results-table.html
@@ -16,7 +16,7 @@
             <tbody id="pred-body">
                 {{#each this}}
                 <tr>
-                    <td class="bf-table-user">{{userId}}</td>
+                    <td class="bf-table-user">{{user.profile.team}}</td>
                     <td class="bf-table-points">{{round1}}</td>
                     <td class="bf-table-points">{{round2}}</td>
                     <td class="bf-table-points">{{round3}}</td>
