--- a/client/stylesheets/globals/login.import.less
+++ b/client/stylesheets/globals/login.import.less
@@ -2,6 +2,25 @@ body.blank {
   background-color: @color-background;
 }
 
+.login {
+    width: 100px;
+    margin-right: 40px;
+    margin-top: 100px;
+    margin-bottom: 28px;
+}
+
+.login:hover,
+.login:focus,
+.login:active,
+.login.active {
+    width: 128px;
+    margin-bottom: 0px;
+}
+
+.login-panel p {
+    margin-top: 60px;
+}
+
 .login-container {
   max-width: 420px;
   margin:auto;
