--- a/client/stylesheets/globals/various.import.less
+++ b/client/stylesheets/globals/various.import.less
@@ -154,8 +154,9 @@
   float: left;
   width: @menu-width;
   background-color: @color-navy-blue;
+  background-image: url("images/logo.png");
   padding: 18px 10px 18px 18px;
-  height: 56px;
+  height: 62px;
   text-align: center;
 }
 
@@ -180,6 +181,10 @@
 .profile-picture {
   padding: 20px 20px;
   text-align: center;
+}
+
+.profile-picture img {
+  max-width: 50px;
 }
 
 .stats-box div {
@@ -273,7 +278,7 @@
 }
 
 #top-navigation {
-  height: 56px;
+  height: 62px;
   position: relative;
   float: left;
 }
@@ -287,7 +292,7 @@
 }
 
 .header-link {
-  padding: 18px 26px 17px 26px;
+  padding: 21px 26px 20px 26px;
   font-size: 14px;
   float: left;
   border-right:1px solid @border-color;
@@ -303,7 +308,7 @@
 
 
 .navbar-nav > li,.navbar-nav > li > a {
-  height: 56px;
+  height: 62px;
 }
 
 .navbar-nav > li > a {
@@ -955,7 +960,7 @@ label.error:before {
 }
 
 .file-body i.fa {
-  font-size: 56px;
+  font-size: 62px;
 }
 
 /* Filter search */
