--- a/client/templates/common/header.html
+++ b/client/templates/common/header.html
@@ -1,22 +1,12 @@
 <template name="header">
     <div id="header">
-        <div class="color-line">
-        </div>
         <div id="logo" class="light-version">
-        <span>
-            bF Admin Panel
-        </span>
         </div>
         <nav role="navigation">
             <div class="header-link hide-menu"><i class="fa fa-bars"></i></div>
             <div class="small-logo">
-                <span class="text-primary">bf Admin Panel</span>
+                <span class="text-primary">EURO 2016</span>
             </div>
-            <form role="search" class="navbar-form-custom" method="post" action="#">
-                <div class="form-group">
-                    <input type="text" placeholder="Search something special" class="form-control" name="search">
-                </div>
-            </form>
             <div class="mobile-menu">
                 <button type="button" class="navbar-toggle mobile-menu-toggle" data-toggle="collapse" data-target="#mobile-collapse">
                     <i class="fa fa-chevron-down"></i>
