--- a/client/templates/views/commonviews/login.html
+++ b/client/templates/views/commonviews/login.html
@@ -1,52 +1,42 @@
 <template name="login">
 
-    <div class="back-link">
-        <a href="{{pathFor route='root'}}" class="btn btn-primary">{{_ "login_back_home"}}</a>
-    </div>
+	{{#staggering}}
 
-    <div class="login-container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="text-center m-b-md">
-                    <h3>{{_ "login_title"}}</h3>
-                    <small>{{_ "login_title_small"}}</small>
+        <div class="content">
+
+            <div class="row">
+                <div class="col-lg-12">
+                    {{#panel}}
+                        
+                        <div class="bf-table">
+                            <div id="selector" class="fc fc-ltr fc-unthemed bf-table-selector">
+                                <div class="fc-toolbar">
+                                    <div class="fc-left">
+                                        <h1>Logi sisse</h1>
+                                    </div>   
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <div class="hpanel">
+                                    <div class="panel-body login-panel">
+                                        <a><img id="fb-login" class="login" src="images/fb.png"/></a>
+                                        <a><img id="google-login" class="login" src="images/g+.png"/></a>
+                                        <a><img id="tw-login" class="login" src="images/tw.png"/></a>
+                                        <p>Kasuta ülal toodud linke ja logi sisse enda meelepärase kontoga. <br>
+                                           NB! Kui kardad, et siinsele leheküljele sisenemine kajastub ka kuidagi sinu sotsiaalmeedia ruumis, siis ära muretse - mitte midagi me sinu eest postitama ega jagame ei hakka!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    {{/panel}}
                 </div>
-                <div class="hpanel">
-                    <div class="panel-body">
-                        <form action="/dashboard" id="loginForm">
-                            <div class="form-group">
-                                <label class="control-label" for="username">{{_ "login_username"}}</label>
-                                <input type="email" placeholder={{_ "login_email"}} title={{_ "login_email_title"}} required value="" name="username" id="username" class="form-control">
-                                <span class="help-block small">{{_ "login_username_small"}}</span>
-                            </div>
-                            <div class="form-group">
-                                <label class="control-label" for="password">{{_ "login_password"}}</label>
-                                <input type="password" title={{_ "login_password_title"}} placeholder="******" required value="" name="password" id="password" class="form-control">
-                                <span class="help-block small">{{_ "login_password_small"}}</span>
-                            </div>
-                            <div class="checkbox">
-                                <input type="checkbox" class="i-checks" checked>
-                                {{_ "login_password_remember"}}
-                                <p class="help-block small">({{_ "login_password_remember_small"}})</p>
-                            </div>
-                            <button class="btn btn-success btn-block">{{_ "login"}}</button>
-                            <a class="btn btn-default btn-block" href="/register">{{_ "register"}}</a>
-                        </form>
-                    </div>
-                </div>
             </div>
+            
         </div>
-		<div class="row">
-            <div class="col-md-12 text-center">
-                <button id="fb-login" class="btn btn-facebook"><i class="fa fa-facebook"></i> | {{_ "login"}}</button>
-                <button id="google-login" class="btn btn-google"> <i class="fa fa-google"></i> | {{_ "login"}}</button>
-            </div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-12 text-center">
-                {{_ "copyright"}}
-            </div>
-        </div>
-    </div>
+	{{/staggering}}
+
 </template>
