Add roles on user create

--- a/client/templates/views/commonviews/login.html
+++ b/client/templates/views/commonviews/login.html
@@ -25,7 +25,7 @@
                                         <a><img id="google-login" class="login" src="images/g+.png"/></a>
                                         <a><img id="tw-login" class="login" src="images/tw.png"/></a>
                                         <p>Kasuta ülal toodud linke ja logi sisse enda meelepärase kontoga. <br>
-                                           NB! Kui kardad, et siinsele leheküljele sisenemine kajastub ka kuidagi sinu sotsiaalmeedia ruumis, siis ära muretse - mitte midagi me sinu eest postitama ega jagame ei hakka!
+                                           NB! Kui kardad, et siinsele leheküljele sisenemine kajastub ka kuidagi sinu sotsiaalmeedia ruumis, siis ära muretse - mitte midagi me sinu eest postitama ega jagama ei hakka!
                                         </p>
                                     </div>
                                 </div>
