--- a/client/templates/views/payments/payments.html
+++ b/client/templates/views/payments/payments.html
@@ -1,9 +1,32 @@
 <template name="payments">
 
 	<div class="container">
-		<form id="checkout" method="post" action="/checkout">
+		<!-- PayPal Logo -->
+		<table border="0" cellpadding="10" cellspacing="0" align="center">
+			<tr><td align="center"></td></tr>
+			<tr>
+				<td align="center">
+					<a href="https://www.paypal.com/webapps/mpp/paypal-popup" title="How PayPal Works" onclick="javascript:window.open('https://www.paypal.com/webapps/mpp/paypal-popup',
+						'WIPaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1060, height=700'); return false;">
+						<img src="https://www.paypalobjects.com/webstatic/mktg/logo/bdg_now_accepting_pp_2line_w.png" border="0" alt="Now Accepting PayPal">
+					</a>
+					<div style="text-align:center">
+						<a href="https://www.paypal.com/webapps/mpp/how-paypal-works">
+							<font size="2" face="Arial" color="#0079CD">How PayPal Works</font>
+						</a>
+					</div>
+				</td>
+			</tr>
+		</table><!-- PayPal Logo -->
+		
+		<form id="checkout" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+			<input type="hidden" name="cmd" value="_s-xclick">
+			<input type="hidden" name="hosted_button_id" value="8SGBN3P3V8G3Q">
+
 			<div id="payment-form"></div>
 			<button type="submit" class="btn btn-success">Pay €15</button>
+			<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="Tasu osavõtumaks ja naudi mängu!">
+			<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 		</form>
 	</div>
 	
