removig unused pages for launch

--- a/client/templates/views/fixtures/results-table.html
+++ b/client/templates/views/fixtures/results-table.html
@@ -24,7 +24,7 @@
                     </td>
                     <td class="bf-table-away">{{fixture.away_team.name}}</td>
                     <td class="bf-table-group">{{fixture.group}}</td>
-                    <td class="bf-table-user">{{userId}}</td>
+                    <td class="bf-table-user">{{user.profile.team}}</td>
                     <td class="bf-table-score">{{fixture.result.homeGoals}} : {{fixture.result.awayGoals}}</td>
                     <td class="bf-table-points">{{fixture.userPoints}}</td>
                 </tr>
