--- a/client/templates/views/fixtures/results-table.html
+++ b/client/templates/views/fixtures/results-table.html
@@ -2,14 +2,14 @@
         <table id="results" class="footable table table-stripped" data-page-size="100" data-filter=#filter>
             <thead>
                 <tr>
-                    <th data-class="bf-table-date" data-hide="phone, tablet" class="bf-center">Date</th>
-                    <th data-class="bf-table-home" data-hide="phone, tablet" class="bf-center">Home</th>
+                    <th data-class="bf-table-date" data-sort-ignore="true" data-hide="phone, tablet" class="bf-center">Aeg</th>
+                    <th data-class="bf-table-home" data-sort-ignore="true" data-hide="phone, tablet" class="bf-center">Kodu</th>
                     <th data-class="bf-table-vs" data-sort-ignore="true" class="bf-center"></th>
-                    <th data-class="bf-table-away" data-hide="phone, tablet" class="bf-center">Away</th>
-                    <th data-class="bf-table-group" data-hide="phone, tablet" class="bf-center">Group</th>
-                    <th data-class="bf-table-user" data-sort-ignore="true" class="bf-center">User</th>
-                    <th data-class="bf-table-score" data-sort-ignore="true" class="bf-center">Score</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">Points</th>
+                    <th data-class="bf-table-away" data-sort-ignore="true" data-hide="phone, tablet" class="bf-center">Võõrsil</th>
+                    <th data-class="bf-table-group" data-sort-ignore="true" data-hide="phone, tablet" class="bf-center">Grupp</th>
+                    <th data-class="bf-table-user" class="bf-center">Kasutaja</th>
+                    <th data-class="bf-table-score" class="bf-center">Tulemus</th>
+                    <th data-class="bf-table-points" class="bf-center">Punktid</th>
                 </tr>
             </thead>
             <tbody id="pred-body">
@@ -24,7 +24,7 @@
                     </td>
                     <td class="bf-table-away">{{fixture.away_team.name}}</td>
                     <td class="bf-table-group">{{fixture.group}}</td>
-                    <td class="bf-table-user">{{user.profile.team}}</td>
+                    <td class="bf-table-user">{{user.team}}</td>
                     <td class="bf-table-score">{{fixture.result.homeGoals}} : {{fixture.result.awayGoals}}</td>
                     <td class="bf-table-points">{{fixture.userPoints}}</td>
                 </tr>
