--- a/client/templates/views/predictions/predictions-table.html
+++ b/client/templates/views/predictions/predictions-table.html
@@ -3,12 +3,12 @@
         <table id="predictions" class="footable table table-stripped" data-page-size="100" data-filter=#filter>
             <thead>
                 <tr>
-                    <th data-class="bf-table-date" data-hide="phone, tablet" class="bf-center">Date</th>
-                    <th data-class="bf-table-home" data-hide="phone, tablet" class="bf-center">Home</th>
+                    <th data-class="bf-table-date" data-hide="phone, tablet" class="bf-center">Aeg</th>
+                    <th data-class="bf-table-home" data-sort-ignore="true" data-hide="phone, tablet" class="bf-center">Kodu</th>
                     <th data-class="bf-table-vs" data-sort-ignore="true" class="bf-center"></th>
-                    <th data-class="bf-table-away" data-hide="phone, tablet" class="bf-center">Away</th>
-                    <th data-class="bf-table-group" data-hide="phone, tablet" class="bf-center">Group</th>
-                    <th data-class="bf-table-score" data-sort-ignore="true" class="bf-center">Score</th>
+                    <th data-class="bf-table-away" data-sort-ignore="true" data-hide="phone, tablet" class="bf-center">Võõrsil</th>
+                    <th data-class="bf-table-group" data-hide="phone, tablet" class="bf-center">Grupp</th>
+                    <th data-class="bf-table-score" data-sort-ignore="true" class="bf-center">Tulemus</th>
                 </tr>
             </thead>
             <tfoot>
