--- a/client/templates/views/table/user-results-table.html
+++ b/client/templates/views/table/user-results-table.html
@@ -2,21 +2,21 @@
         <table id="userPoints" class="footable table table-stripped" data-page-size="100" data-filter=#filter>
             <thead>
                 <tr>
-                    <th data-class="bf-table-user" data-sort-ignore="true" class="bf-center">User</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">I round</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">II round</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">III round</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">IV round</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">V round</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">VI round</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">VII round</th>
-                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">Total</th>
+                    <th data-class="bf-table-user" data-sort-ignore="true" class="bf-center">Kasutaja</th>
+                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">I</th>
+                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">II</th>
+                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">III</th>
+                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">IV</th>
+                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">V</th>
+                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">VI</th>
+                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">VII</th>
+                    <th data-class="bf-table-points" data-sort-ignore="true" class="bf-center">Kokku</th>
                 </tr>
             </thead>
             <tbody id="pred-body">
                 {{#each this}}
                 <tr>
-                    <td class="bf-table-user">{{user.profile.team}}</td>
+                    <td class="bf-table-user">{{user.team}}</td>
                     <td class="bf-table-points">{{round1}}</td>
                     <td class="bf-table-points">{{round2}}</td>
                     <td class="bf-table-points">{{round3}}</td>
