--- a/client/templates/common/header.html
+++ b/client/templates/common/header.html
@@ -1,7 +1,9 @@
 <template name="header">
     <div id="header">
-        <div id="logo" class="light-version">
-        </div>
+        <a href="{{pathFor route='root'}}">
+            <div id="logo" class="light-version">
+            </div>
+        </a>
         <nav role="navigation">
             <div class="header-link hide-menu"><i class="fa fa-bars"></i></div>
             <div class="small-logo">
@@ -17,130 +19,13 @@
                             <a class="" href="{{pathFor route='login'}}">Logi sisse</a>
                         </li>
                         <li>
-                            <a class="" href="{{pathFor route='login'}}">Logi välja</a>
-                        </li>
-                        <li>
-                            <a class="" href="{{pathFor route='profile'}}">Sinu profiil</a>
+                            <a class="" href="{{pathFor route='logout'}}">Logi välja</a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="navbar-right">
                 <ul class="nav navbar-nav no-borders">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                            <i class="pe-7s-speaker"></i>
-                        </a>
-                        <ul class="dropdown-menu hdropdown notification animated flipInX">
-                            <li>
-                                <a>
-                                    <span class="label label-success">NEW</span> It is a long established.
-                                </a>
-                            </li>
-                            <li>
-                                <a>
-                                    <span class="label label-warning">WAR</span> There are many variations.
-                                </a>
-                            </li>
-                            <li>
-                                <a>
-                                    <span class="label label-danger">ERR</span> Contrary to popular belief.
-                                </a>
-                            </li>
-                            <li class="summary"><a href="#">See all notifications</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" href="#" data-toggle="dropdown">
-                            <i class="pe-7s-keypad"></i>
-                        </a>
-                        <div class="dropdown-menu hdropdown bigmenu animated flipInX">
-
-
-                            <table>
-                                <tbody>
-                                <tr>
-                                    <td>
-                                        <a href="{{pathFor route='projects'}}">
-                                            <i class="pe pe-7s-portfolio text-info"></i>
-                                            <h5>Projects</h5>
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="{{pathFor route='mailbox'}}">
-                                            <i class="pe pe-7s-mail text-warning"></i>
-                                            <h5>Email</h5>
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="{{pathFor route='contacts'}}">
-                                            <i class="pe pe-7s-users text-success"></i>
-                                            <h5>Contacts</h5>
-                                        </a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <a href="{{pathFor route='forum'}}">
-                                            <i class="pe pe-7s-comment text-info"></i>
-                                            <h5>Forum</h5>
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="{{pathFor route='analytics'}}">
-                                            <i class="pe pe-7s-graph1 text-danger"></i>
-                                            <h5>Analytics</h5>
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="{{pathFor route='fileManager'}}">
-                                            <i class="pe pe-7s-box1 text-success"></i>
-                                            <h5>Files</h5>
-                                        </a>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
-
-                        </div>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle label-menu-corner" href="#" data-toggle="dropdown">
-                            <i class="pe-7s-mail"></i>
-                            <span class="label label-success">4</span>
-                        </a>
-                        <ul class="dropdown-menu hdropdown animated flipInX">
-                            <div class="title">
-                                You have 4 new messages
-                            </div>
-                            <li>
-                                <a>
-                                    It is a long established.
-                                </a>
-                            </li>
-                            <li>
-                                <a>
-                                    There are many variations.
-                                </a>
-                            </li>
-                            <li>
-                                <a>
-                                    Lorem Ipsum is simply dummy.
-                                </a>
-                            </li>
-                            <li>
-                                <a>
-                                    Contrary to popular belief.
-                                </a>
-                            </li>
-                            <li class="summary"><a href="{{pathFor route='emailView'}}">Kõik sõnumid</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#" id="sidebar" class="right-sidebar-toggle">
-                            <i class="pe-7s-upload pe-7s-news-paper"></i>
-                        </a>
-                    </li>
                     <li class="dropdown">
                         <a href="{{pathFor route='logout'}}">
                             <i class="pe-7s-upload pe-rotate-90"></i>
