--- a/client/templates/views/predictions/predictions.html
+++ b/client/templates/views/predictions/predictions.html
@@ -16,13 +16,13 @@
 									</div>   
 									<div class="fc-right">
 										<div class="group-select fc-button-group">
-											<button id="A" type="button" data-template="A" class="fc-button fc-state-default fc-corner-left fc-state-active">Group A</button>
-											<button id="B" type="button" data-template="B" class="fc-button fc-state-default">Group B</button>
-											<button id="C" type="button" data-template="C" class="fc-button fc-state-default">Group C</button>
-											<button id="D" type="button" data-template="D" class="fc-button fc-state-default">Group D</button>
-											<button id="E" type="button" data-template="E" class="fc-button fc-state-default">Group E</button>
-											<button id="F" type="button" data-template="F" class="fc-button fc-state-default">Group F</button>
-											<button id="ALL" type="button" data-template="ALL" class="fc-button fc-state-default fc-corner-right">All Matches</button>
+											<button id="A" type="button" data-template="A" class="fc-button fc-state-default fc-corner-left fc-state-active">A</button>
+											<button id="B" type="button" data-template="B" class="fc-button fc-state-default">B</button>
+											<button id="C" type="button" data-template="C" class="fc-button fc-state-default">C</button>
+											<button id="D" type="button" data-template="D" class="fc-button fc-state-default">D</button>
+											<button id="E" type="button" data-template="E" class="fc-button fc-state-default">E</button>
+											<button id="F" type="button" data-template="F" class="fc-button fc-state-default">F</button>
+											<button id="ALL" type="button" data-template="ALL" class="fc-button fc-state-default fc-corner-right">Kõik</button>
 										</div>
 									</div>
 								</div>
