--- a/client/templates/views/predictions/predictions-table.html
+++ b/client/templates/views/predictions/predictions-table.html
@@ -3,11 +3,11 @@
         <table id="predictions" class="footable table table-stripped" data-page-size="100" data-filter=#filter>
             <thead>
                 <tr>
-                    <th data-class="bf-table-date" data-hide="phone, tablet" class="bf-center">Aeg</th>
-                    <th data-class="bf-table-home" data-sort-ignore="true" data-hide="phone, tablet" class="bf-center">Kodu</th>
+                    <th data-class="bf-table-date" data-hide= "phone, tablet" class="bf-center">Aeg</th>
+                    <th data-class="bf-table-home" data-sort-ignore="true" data-hide="phone" class="bf-center">Kodu</th>
                     <th data-class="bf-table-vs" data-sort-ignore="true" class="bf-center"></th>
-                    <th data-class="bf-table-away" data-sort-ignore="true" data-hide="phone, tablet" class="bf-center">Võõrsil</th>
-                    <th data-class="bf-table-group" data-hide="phone, tablet" class="bf-center">Grupp</th>
+                    <th data-class="bf-table-away" data-sort-ignore="true" data-hide="phone" class="bf-center">Võõrsil</th>
+                    <th data-class="bf-table-group" data-hide="phone, tablet" data-ignore="true" class="bf-center">Grupp</th>
                     <th data-class="bf-table-score" data-sort-ignore="true" class="bf-center">Tulemus</th>
                 </tr>
             </thead>
@@ -28,18 +28,23 @@
                 <tr>
                     <td class="bf-table-date">{{fixture.date}} @ {{fixture.time}}</td>
                     <td class="bf-table-home">{{fixture.home_team.name}}</td>
+                   
                     <td class="bf-table-vs">
+                    <div id= "testcolumn">
                         <img src={{fixture.home_team.imgSrc}} />
                         <span> vs </span>
                         <img src={{fixture.away_team.imgSrc}} />
+                    </div>
                     </td>
                     <td class="bf-table-away">{{fixture.away_team.name}}</td>
                     <td class="bf-table-group">{{fixture.group}}</td>
                     <td class="bf-table-score">
-                        <input id="fixture-id" type="hidden" value={{fixture._id}}>
-                        <input id="home-score" maxlength="2" type="number" min="0" max="99" class="input-no-spinner" value={{fixture.result.homeGoals}}>
-                        <span> : </span>
-                        <input id="away-score" maxlength="2" type="number" min="0" max="99" class="input-no-spinner" value={{fixture.result.awayGoals}}>
+                        <div id= "testscore"> 
+                            <input id="fixture-id" type="hidden" value={{fixture._id}}>
+                            <input id="home-score" maxlength="2" type="number" min="0" max="99" class="input-no-spinner" value={{fixture.result.homeGoals}}>
+                            <span> : </span>
+                            <input id="away-score" maxlength="2" type="number" min="0" max="99" class="input-no-spinner" value={{fixture.result.awayGoals}}>
+                        </div>
                     </td>
                 </tr>
                 {{/each}}
