--- a/client/templates/views/predictions/predictions-table.html
+++ b/client/templates/views/predictions/predictions-table.html
@@ -26,7 +26,7 @@
             <tbody id="pred-body">
                 {{#each this}}
                 <tr>
-                    <td class="bf-table-date">{{fixture.date}} @ {{fixture.time}}</td>
+                    <td class="bf-table-date">{{fixture.date}} {{fixture.time}}</td>
                     <td class="bf-table-home">{{fixture.home_team.name}}</td>
                    
                     <td class="bf-table-vs">
