--- a/client/stylesheets/globals/login.import.less
+++ b/client/stylesheets/globals/login.import.less
@@ -9,6 +9,14 @@ body.blank {
     margin-bottom: 28px;
 }
 
+@media(max-width: 768px) {
+.login {
+    width: 100px;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+}
 .login:hover,
 .login:focus,
 .login:active,
