--- a/client/stylesheets/globals/panels.import.less
+++ b/client/stylesheets/globals/panels.import.less
@@ -36,6 +36,16 @@
   position: relative;
 }
 
+@media(max-width: 768px) {
+.hpanel .panel-body {
+  background: #fff;
+  border: 1px solid @border-color;
+  border-radius: 2px;
+  padding: 20px;
+  position: relative;
+  height: 100%;
+}
+}
 
 .hpanel.panel-group .panel-body:first-child {
   border-top: 1px solid @border-color;
