--- a/client/templates/views/fixtures/results-table.html
+++ b/client/templates/views/fixtures/results-table.html
@@ -15,7 +15,7 @@
             <tbody id="pred-body">
                 {{#each this}}
                 <tr>
-                    <td class="bf-table-date">{{fixture.date}} @ {{fixture.time}}</td>
+                    <td class="bf-table-date">{{fixture.date}} {{fixture.time}}</td>
                     <td class="bf-table-home">{{fixture.home_team.name}}</td>
                     <td class="bf-table-vs">
                         <img src={{fixture.home_team.imgSrc}} />
